--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
         <!--Meu nome é João Victor Santos Pinheiro, tenho 23 anos. Sou um dos raros palmenses realmente nascido aqui(?!)<br>
         Considero-me uma pessoa bem tranquila, gosto de ajudar e de aprender, entretanto tenho diculdades de me focar.-->
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad omnis a commodi adipisci accusamus neque, porro dicta illo aliquam accusantium consequuntur quas, explicabo suscipit debitis cum quo similique libero! Soluta.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad omnis a commodi adipisci accusamus neque, porro dicta illo aliquam accusantium consequuntur quas, explicabo suscipit debitis cum quo similique libero!<br> Soluta.
 
     </p>
 
@@ -65,22 +65,22 @@ Fundamentos e Projeto de Banco de Dados
         </tr>
         <tr>
             <td>1°</td>
-            <td><a href="/ementas/tendencias.html" >Tendências Tecnológicas para o Mercado de TI</a></td>
+            <td><a href="/tree/main/ementas/tendencias.html" >Tendências Tecnológicas para o Mercado de TI</a></td>
             <td>I</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/ementas/progweb.html">Programação Básica para Web</a></td>
+            <td><a href="/tree/main/ementas/progweb.html">Programação Básica para Web</a></td>
             <td>II</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/ementas/introprog.html">Introdução à Programação</a></td>
+            <td><a href="/tree/main/ementas/introprog.html">Introdução à Programação</a></td>
             <td>III</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/ementas/introprog.html">Fundamentos e Projeto de Banco de Dados</a></td>
+            <td><a href="/tree/main/ementas/introprog.html">Fundamentos e Projeto de Banco de Dados</a></td>
             <td>IV</td>
         </tr>
     </table>
