--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@ Fundamentos e Projeto de Banco de Dados
         </tr>
         <tr>
             <td>1°</td>
-            <td><a href="/tree/main/ementas/tendencias.html" >Tendências Tecnológicas para o Mercado de TI</a></td>
+            <td><a href="tree/main/ementas/tendencias.html" >Tendências Tecnológicas para o Mercado de TI</a></td>
             <td>I</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/tree/main/ementas/progweb.html">Programação Básica para Web</a></td>
+            <td><a href="/ementas/progweb.html">Programação Básica para Web</a></td>
             <td>II</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/tree/main/ementas/introprog.html">Introdução à Programação</a></td>
+            <td><a href="./ementas/introprog.html">Introdução à Programação</a></td>
             <td>III</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/tree/main/ementas/introprog.html">Fundamentos e Projeto de Banco de Dados</a></td>
+            <td><a href="/ementas/introprog.html">Fundamentos e Projeto de Banco de Dados</a></td>
             <td>IV</td>
         </tr>
     </table>
