--- a/index.html
+++ b/index.html
@@ -70,17 +70,18 @@ Fundamentos e Projeto de Banco de Dados
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/ementas/progweb.html">Programação Básica para Web</a></td>
+            <td><a href="ementas/introprog.html">Programação Básica para Web</a></td>
+            
             <td>II</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="./ementas/introprog.html">Introdução à Programação</a></td>
+            <td><a href="ementas/introprog.html">Introdução à Programação</a></td>
             <td>III</td>
         </tr>
         <tr>
             <td>2°</td>
-            <td><a href="/ementas/introprog.html">Fundamentos e Projeto de Banco de Dados</a></td>
+            <td><a href="ementas/introprog.html">Fundamentos e Projeto de Banco de Dados</a></td>
             <td>IV</td>
         </tr>
     </table>
