--- a/ementas/bancodados.html
+++ b/ementas/bancodados.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>BANCO DE DADOS</h1>
+    <p><a href="../index.html" rel="prev">voltar para pagina anterior  </a> </p>
+    <h1>Fundamentos e Projeto de Banco de Dados</h1>
     
 </body>
 </html>
