--- a/ementas/introprog.html
+++ b/ementas/introprog.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ementa: Introdução a Programação</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">nk
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <p><small><a href="/index.html" rel="prev">voltar para pagina anterior  </a></small> 
+    <p><small><a href="../index.html" rel="prev">voltar para pagina anterior  </a></small> 
     </p>
    
 
