--- a/ementas/tendencias.html
+++ b/ementas/tendencias.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <p><a href="/index.html" rel="prev">voltar para pagina anterior  </a> 
+    <p><a href="../index.html" rel="prev">voltar para pagina anterior  </a> 
     </p>
     <h1>Tendências Tecnológicas para o Mercado de TI</h1>
 </body>
