--- a/ementas/tendencias.html
+++ b/ementas/tendencias.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pr-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,58 @@
     <title>Ementa: T.T.M de TI</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <p><a href="../index.html" rel="prev">voltar para pagina anterior  </a> 
+    <p><a href="../index.html" rel="prev">voltar para pagina anterior </a>
     </p>
-    <h1>Tendências Tecnológicas para o Mercado de TI</h1>
+    <section>
+        <h1>Tendências Tecnológicas para o Mercado de TI</h1>
+    </section>
+
+    <section>
+        <h2>Carga horária</h2>
+        <ul>
+            <li>Carga horária total: 36 horas.
+            </li>
+            <li>Carga horária teórica: 30 horas;
+        
+            <li>Carga horária prática: 0 horas;
+            </li>
+            <li>Carga horária presencial: 30 horas;
+            </li>
+            <li>Carga horária à distância (se for o caso): 06 horas;
+            </li>
+
+        </ul>
+    </section>
+
+    <section>
+        <h2>Ementa</h2>
+        <p>Apresentação do Mercado de trabalho em TI; Apresentação das carreiras que podem
+            ser seguidas, atividades de serviço, comércio e indústria; Demonstração do panorama
+            local, do Estado e do País.</p>
+        </dl>
+    </section>
+
+    <section>
+        <h2>Competências</h2>
+        <ul>
+            <li>Conhecer as áreas de TI;</li>
+            <li>Conhecer e compreender o perfil dos profissionais de TI;</li>
+            <li>Conhecer as empresas locais e regionais;</li>
+            <li>Conhecer os grupos de pesquisa do IFTO.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Habilidades</h2>
+        <ul>
+            <li>Identificação de perfis profissionais na área de TI;</li>
+            <li>Identificação das atividades mais comuns para profissionais de TI no Estado e no País;</li>
+            <li>Interação com os grupos de pesquisa e sua dinâmica.</li>
+        </ul>
+    </section>
+
 </body>
+
 </html>
