--- a/ementas/bancodados.html
+++ b/ementas/bancodados.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,64 @@
     <title>Ementa: Banco de Dados</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <p><a href="../index.html" rel="prev">voltar para pagina anterior  </a> </p>
+    <p><a href="../index.html" rel="prev">voltar para pagina anterior </a> </p>
     <h1>Fundamentos e Projeto de Banco de Dados</h1>
-    
+    <section>
+        <h2>Carga horária</h2>
+        <ul>
+            <li>Carga horária total: 72 horas.
+            </li>
+            <li>Carga horária teórica: 32 horas;
+
+            <li>Carga horária prática: 40 horas;
+            </li>
+            <li>Carga horária presencial: 60 horas;
+            </li>
+            <li>Carga horária à distância (se for o caso): 12 horas;
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Ementa</h2>
+        <p>Conhecimentos básicos sobre Bancos de Dados e Sistemas de Gerenciamento de
+            Bancos de Dados; Aspectos de projeto; Acesso a dados e linguagem de manipulação de
+            dados; Modelos de dados e sua evolução: modelo hierárquico, modelo de rede e
+            modelo relacional.</p>
+        </dl>
+    </section>
+
+    <section>
+        <h2>Competências</h2>
+        <ul>
+            <li>Conhecer os conceitos de banco de dados (BD);</li>
+            <li> Compreender os conceitos de sistema de gerência de banco de dados (SGBD);
+            </li>
+            <li>Caracterizar e conhecer as vantagens de um SGBD.
+            </li>
+
+
+
+        </ul>
+    </section>
+
+    <section>
+        <h2>Habilidades</h2>
+        <ul>
+            <li>Diferenciação dos sistemas de armazenamento de dados;</li>
+            <li>Diferenciação das formas de modelagem de banco de dados;</li>
+            <li>Realização de modelagem de banco de dados a partir de um estudo de caso;</li>
+            <li>Preparação de modelo lógico consistente;</li>
+            <li>Transformação dos modelos conceituais em lógicos;</li>
+            <li>Desenvolvimento do modelo lógico e físico;</li>
+            <li>Desenvolvimento de normalização de relações;</li>
+            <li>Desenvolvimento da Álgebra Relacional para consultas procedurais;</li>
+            <li>Realização de manipulações básicas de dados através de linguagem SQL.</li>
+        </ul>
+    </section>
+
 </body>
+
 </html>
