--- a/ementas/progweb.html
+++ b/ementas/progweb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pr-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,53 @@
 <body>
     <p><a href="../index.html" rel="prev">voltar para pagina anterior  </a> 
     </p>
-    <h1>Programação Básica Web</h1>
+    <h1>Programação Básica para Web</h1>
+    <section>
+        <h2>Carga horária</h2>
+        <ul>
+            <li>Carga horária total: 72 horas.
+            </li>
+            <li>Carga horária teórica: 32 horas;
+        
+            <li>Carga horária prática: 40 horas;
+            </li>
+            <li>Carga horária presencial: 60 horas;
+            </li>
+            <li>Carga horária à distância (se for o caso): 12 horas;
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Ementa</h2>
+        <p>Introdução à arquitetura cliente/servidor e protocolo Hypertext Transfer Protocol
+            (HTTP); Construção de páginas Web por meio de Web Standards (W3C); linguagem de
+            marcação: HyperText Markup Language (HTML); Extensible HyperText Markup
+            Language (XHTML); Construção de estilos para páginas Web com Cascade Style
+            Sheet (CSS); Introdução de comportamentos em páginas Web por meio de
+            programação Javascript; Educação em Direitos Humanos; Educação Ambiental.</p>
+        </dl>
+    </section>
+
+    <section>
+        <h2>Competências</h2>
+        <ul>
+            <li>Conhecer fundamentos, tecnologias e ferramentas para desenvolver páginas Web;</li>
+            <li>Desenvolver páginas Web de acordo com os padrões Web do W3C.</li>
+         
+        </ul>
+    </section>
+
+    <section>
+        <h2>Habilidades</h2>
+        <ul>
+            <li>Utilização de ferramentas e técnicas para criação e manutenção de páginas na  internet;</li>
+            <li>Aplicação da estrutura de estilos em páginas Web;</li>
+            <li>Aplicação dos comportamentos em páginas Web utilizando JavaScript;</li>
+            <li>Estruturação de layouts de aplicações Web de acordo com os padrões W3C.</li>
+        </ul>
+    </section>
+
+
 </body>
 </html>
