--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
 <body>
     <h1>Minha primeira página</h1>
     <hr>
+      <!--SESSÃO 1 -->
+    <section>
     <h2>Sobre mim</h2>
     <!--SESSÃO 1 -->
-    <section>
+ 
 
         <a href="https://www.linkedin.com/in/jo%C3%A3o-victor-santos-pinheiro-847408205/"> <img src="imagens/joao.jfif"
-                alt=" Foto João" style="border-radius: 50%; height: 100px;" title="Foto de João Victor"> </a>
+                alt=" Foto de João" style="border-radius: 50%; height: 100px;" title="Foto de João Victor"> </a>
 
         <h3>João Victor Santos Pinheiro</h3>
         <p>
+            Tenho 23 anos, sou palmense, aluno do curso de Sistemas para Internet no IFTO - Palmas, estou teoricamente no segundo periodo do curso.
             <!--Meu nome é João Victor Santos Pinheiro, tenho 23 anos. Sou um dos raros palmenses realmente nascido aqui(?!)<br>
             Considero-me uma pessoa bem tranquila, gosto de ajudar e de aprender, entretanto tenho diculdades de me focar.-->
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad omnis a commodi adipisci accusamus neque, porro
-            dicta illo aliquam accusantium consequuntur quas, explicabo suscipit debitis cum quo similique libero!<br>
-            Soluta.
+            
+            <blockquote>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad omnis a commodi adipisci accusamus neque, porro
+                dicta illo aliquam accusantium consequuntur quas, explicabo suscipit debitis cum quo similique libero!<br>
+                Soluta. <cite>Cicéro - 45 a.C</cite>
+            </blockquote>
 
         </p>
     </section>
@@ -34,14 +40,12 @@
     <!--SESSÃO 2 -->
     <section>
         <h3>Assuntos que pretendo estudar</h3>
-        <!-- lista com 3 assuntos que são de seu interesse ou que são necessários serem de estudados.-->
-        <ol>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veja mais sobre o assunto <a
-                    href="https://www.google.com/" target="_blank">aqui</a></li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.Veja mais sobre o assunto <a
-                    href="https://www.google.com/" target="_blank">aqui</a></li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.Veja mais sobre o assunto <a
-                    href="https://www.google.com/" target="_blank">aqui</a></li>
+            <li>Desenho e pintura digital. Veja mais sobre o assunto <a
+                    href="https://ecdd.infnet.edu.br/guia-o-que-e-pintura-digital/" target="_blank">aqui</a></li>
+            <li>Banco de Dados. Veja mais sobre o assunto <a
+                    href="https://tinyurl.com/3fpawkjf" target="_blank">aqui</a></li>
+            <li>Inglês.Veja mais sobre o assunto <a
+                    href="https://tinyurl.com/y2r7bcn4" target="_blank">aqui</a></li>
             </li>
         </ol>
     </section>
@@ -50,51 +54,56 @@
     <section>
 
         <h3>Assuntos que estou estudando</h3>
-        <!--lista com no mínimo 3 assuntos   -->
         <ol type="I">
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.Veja mais sobre o assunto <a
-                    href="https://www.google.com/" target="_blank">aqui</a> </li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.Veja mais sobre o assunto <a
-                    href="https://www.google.com/" target="_blank">aqui</a></li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.Veja mais sobre o assunto <a
-                    href="https://www.google.com/" target="_blank">aqui</a></li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.Veja mais sobre o assunto <a
-                    href="https://www.google.com/" target="_blank">aqui</a></li>
+            <li>HTML - Linguagem de Marcação de Hipertexto.Veja mais sobre o assunto <a
+                    href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">aqui</a> </li>
+            <li>JAVA.Veja mais sobre o assunto <a
+                    href="https://www.java.com/pt-BR/download/help/whatis_java.html" target="_blank">aqui</a></li>
+            <li>Normatização e legislação da qualidade.Veja mais sobre o assunto <a
+                    href="https://www.ipea.gov.br/radar/temas/industria/625-infraestrutura-da-qualidade-normas-tecnicas-e-normalizacao" target="_blank">aqui</a></li>
+            
         </ol>
     </section>
 
     <!--SESSÃO 4 -->
     <section>
         <h3>Meu currículo acadêmico</h3>
-        <table>
-            <tr>
-                <thead>
+        <table  border="1"">
+            <thead>
+                <tr>
                     <th>Período</th>
                     <th>Nome da Disciplica</th>
                     <th>Professor</th>
-                </thead>
-            </tr>
-            <tr>
-                <td>1°</td>
-                <td><a href="ementas/tendencias.html">Tendências Tecnológicas para o Mercado de TI</a></td>
-                <td>I</td>
-            </tr>
-            <tr>
-                <td>2°</td>
-                <td><a href="ementas/introprog.html">Programação Básica para Web</a></td>
-
-                <td>II</td>
-            </tr>
-            <tr>
-                <td>2°</td>
-                <td><a href="ementas/introprog.html">Introdução à Programação</a></td>
-                <td>III</td>
-            </tr>
-            <tr>
-                <td>2°</td>
-                <td><a href="ementas/introprog.html">Fundamentos e Projeto de Banco de Dados</a></td>
-                <td>IV</td>
-            </tr>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1°</td>
+                    <td><a href="ementas/tendencias.html">Tendências Tecnológicas para o Mercado de TI</a></td>
+                    <td> MSC. Rodrigo Luiz
+                        dos Santo</td>
+                </tr>
+                <tr>
+                    <td>2°</td>
+                    <td><a href="ementas/progweb.html">Programação Básica para Web</a></td>
+                    <td>MSC. Mauro
+                        Henrique Lima
+                        de Boni</td>
+                </tr>
+                <tr>
+                    <td>2°</td>
+                    <td><a href="ementas/introprog.html">Introdução à Programação</a></td>
+                    <td>MSC. Helder Cleber
+                        Almeida
+                        Pereira</td>
+                </tr>
+                <tr>
+                    <td>2°</td>
+                    <td><a href="ementas/bancodados.html">Fundamentos e Projeto de Banco de Dados</a></td>
+                    <td>Esp. Leonardo José
+                        de Sales</td>
+                </tr>
+            </tbody>
         </table>
     </section>
 
