--- a/ementas/Nova pasta/progweb-BMO.html
+++ b/ementas/Nova pasta/progweb-BMO.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ementa da matéria de Tendências Tecnológicas para o Mercado de TI">
-    <meta name="author" content="Joao Victor Santos">
-    <title>Ementa: T.T.M de TI</title>
+    <title>Ementa: Programação Básica Web</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <p><a href="../index.html" rel="prev">voltar para pagina anterior </a>
-    </p>
     <section>
-        <h1>Tendências Tecnológicas para o Mercado de TI</h1>
+        <p><a href="../index.html" rel="prev">voltar para pagina anterior </a>
+        </p>
+        <h1>Programação Básica Web</h1>
     </section>
-
     <section>
         <h2>Carga horária</h2>
         <ul>
-            <li>Carga horária total: 36 horas.
+            <li>Carga horária total: 72 horas.
             </li>
-            <li>Carga horária teórica: 30 horas;
-        
-            <li>Carga horária prática: 0 horas;
-            </li>
-            <li>Carga horária presencial: 30 horas;
-            </li>
-            <li>Carga horária à distância (se for o caso): 06 horas;
-            </li>
+            <li>Carga horária teórica: 36 horas;
 
+            <li>Carga horária prática: 36 horas;
+            </li>
+            <li>Carga horária presencial: 60 horas;
+            </li>
+            <li>Carga horária à distância (se for o caso): 12 horas;
+            </li>
         </ul>
     </section>
 
