--- a/ementas/Nova pasta/tendencias-BMO.html
+++ b/ementas/Nova pasta/tendencias-BMO.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ementa da matéria de Tendências Tecnológicas para o Mercado de TI">
-    <meta name="author" content="Joao Victor Santos">
     <title>Ementa: T.T.M de TI</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -30,7 +29,6 @@
             </li>
             <li>Carga horária à distância (se for o caso): 06 horas;
             </li>
-
         </ul>
     </section>
 
