--- a/ementas/bancodados.html
+++ b/ementas/bancodados.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ementa: Banco de Dados</title>
+    <meta name="description" content="Ementa da matéria de Introdução a Programação">
+    <meta name="author" content="Joao Victor Santos">
+    <title>Ementa: Fundamentos e Projeto de Banco de Dados</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
