--- a/ementas/Nova pasta/introprog-BMO.html
+++ b/ementas/Nova pasta/introprog-BMO.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-Br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ementa da matéria de Introdução a Programação">
-    <meta name="author" content="Joao Victor Santos">
     <title>Ementa: Introdução a Programação</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-
 <body>
-    <p><small><a href="../index.html" rel="prev">voltar para pagina anterior </a></small>
+    <p><small><a href="../index.html" rel="prev">voltar para pagina anterior  </a></small> 
     </p>
 
     <H1>Introdução a Programação</H1>
-
-    <h2>Carga horária</h2>
+   
+   <h2>Carga horária</h2>
     <ul>
         <li>Carga horária total: 80 horas.
         </li>
         <li>Carga horária teórica: 20 horas;
-
+    
         <li>Carga horária prática: 60 horas;
         </li>
         <li>Carga horária presencial: 60 horas;
@@ -37,28 +34,31 @@
         unidimensionais (vetores); Variáveis indexadas bidimensionais (matrizes);
         Manipulação de Strings; Conceitos e Manipulação de variáveis compostas de diversos
         tipos (Registros); Conceito e manipulação de Arquivos (leitura e escrita);
-        Modularização; Funções; Passagem de parâmetros.
+        Modularização; Funções; Passagem de parâmetros.        
     </p>
-    <h2>Competências</h2>
+<h2>Competências</h2>
 
-    <ul>
-        <li>Conhecer os métodos para construção e representação de algoritmos e programas;</li>
-        <li>Compreender a estrutura de funções;</li>
-        <li>Conhecer os métodos de manipulação e acesso a arquivos;</li>
-        <li>Desenvolver programas estruturados. </li>
-    </ul>
+<ul>
+    <li>Conhecer os métodos para construção e representação de algoritmos e programas;</li>
+    <li>Compreender a estrutura de funções;</li>
+    <li>Conhecer os métodos de manipulação e acesso a arquivos;
+    </li>
+    <li>Desenvolver programas estruturados.
+    </li>
+</ul>
 
-    <h2>Habilidades</h2>
-    <ul>
-
-        <li>Utilização de estruturas de controle;</li>
-        <li> Manipulação de variáveis simples e compostas;</li>
-        <li> Desenvolvimento de programas por meio de modularização;</li>
-        <li>EDesenvolvimento de Funções e métodos de passagem de parâmetros; </li>
-        <li>Utilização de arquivos do tipo texto, para leitura e escrita.</li>
-    </ul>
+<h2>Habilidades</h2>
+<ul>
+    
+    <li>Utilização de estruturas de controle;
+    </li>
+    <li> Manipulação de variáveis simples e compostas;
+    </li>
+    <li> Desenvolvimento de programas por meio de modularização;</li>
+     <li>Desenvolvimento de Funções e métodos de passagem de parâmetros; </li>
+    <li>Utilização de arquivos do tipo texto, para leitura e escrita.</li>
+</ul>
 
 
 </body>
-
 </html>
