--- a/ementas/progweb.html
+++ b/ementas/progweb.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="pr-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ementa da matéria de Programação Básica para Web">
+    <meta name="author" content="Joao Victor Santos">
     <title>Ementa: Programação Básica Web</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
