--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-Br">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Primeira pagina c">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Minha página</title>
 
@@ -29,9 +29,10 @@
             Considero-me uma pessoa bem tranquila, gosto de ajudar e de aprender, entretanto tenho diculdades de me focar.-->
             
             <blockquote>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad omnis a commodi adipisci accusamus neque, porro
-                dicta illo aliquam accusantium consequuntur quas, explicabo suscipit debitis cum quo similique libero!<br>
-                Soluta. <cite>Cicéro - 45 a.C</cite>
+                <em>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad omnis a commodi adipisci accusamus neque, porro
+                    dicta illo aliquam accusantium consequuntur quas, explicabo suscipit debitis cum quo similique libero! Soluta.
+                </em><cite>Cicéro - 45 a.C</cite>
             </blockquote>
 
         </p>
@@ -40,7 +41,8 @@
     <!--SESSÃO 2 -->
     <section>
         <h3>Assuntos que pretendo estudar</h3>
-            <li>Desenho e pintura digital. Veja mais sobre o assunto <a
+           <ol> 
+               <li>Desenho e pintura digital. Veja mais sobre o assunto <a
                     href="https://ecdd.infnet.edu.br/guia-o-que-e-pintura-digital/" target="_blank">aqui</a></li>
             <li>Banco de Dados. Veja mais sobre o assunto <a
                     href="https://tinyurl.com/3fpawkjf" target="_blank">aqui</a></li>
@@ -69,6 +71,7 @@
     <section>
         <h3>Meu currículo acadêmico</h3>
         <table  border="1"">
+            
             <thead>
                 <tr>
                     <th>Período</th>
@@ -104,6 +107,7 @@
                         de Sales</td>
                 </tr>
             </tbody>
+            <fitcaption>Histórico Curricular. A grade completa pode ser encontrada <a href="">aqui</a></fitcaption>
         </table>
     </section>
 
